# a2o

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
a2o/: __init__.py  cli.py  config.py  models.py  server.py
a2o/converters/: parser.py  request.py  response.py  streaming.py
tests/: conftest.py  run_e2e_test.py  test_e2e_claude_code.py  test_integration.py  test_request_conversion.py  test_response_conversion.py  test_streaming_conversion.py
