[project]
name = "a2o"
version = "0.1.0"
description = "Lightweight Anthropic-to-OpenAI API proxy — run Claude Code with any OpenAI-compatible backend"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "WqyJh" },
]
keywords = [
    "anthropic",
    "openai",
    "proxy",
    "claude",
    "claude-code",
    "llm",
    "api-gateway",
    "streaming",
    "sse",
    "tool-calling",
    "extended-thinking",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Software Development :: Libraries",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
]

[project.urls]
Homepage = "https://github.com/WqyJh/a2o"
Documentation = "https://github.com/WqyJh/a2o#readme"
Repository = "https://github.com/WqyJh/a2o"
Issues = "https://github.com/WqyJh/a2o/issues"

[project.scripts]
a2o = "a2o.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["a2o"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
